--- a/regionalizados/src/main/resources/templates/CadastroPessoa.html
+++ b/regionalizados/src/main/resources/templates/CadastroPessoa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Cadastro de Pessoas</title>
@@ -7,13 +8,19 @@
 <link rel="stylesheet" type="text/css" href="/css/estilo.css">
 </head>
 <body>
-
+ 
 <form class="form-horizontal" method="post" action="/pessoa">
 
+	<div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
+		<span th:text="${mensagem}">esta mensagem esta vindo do PessoaController</span>
+	</div>
+
 	<div class="panel panel-default">
+	
 	  <div class="panel-heading">
 	    <h3 class="panel-title">Nova Pessoa</h3>
 	  </div>
+	  
 	  <div class="panel-body">
 	   	
 	   	  <div class="form-group">
