--- a/regionalizados/src/main/resources/static/css/estilo.css
+++ b/regionalizados/src/main/resources/static/css/estilo.css
@@ -1,3 +1,13 @@
 .panel-default, .alert{
 	margin: 10px;
 }
+
+.aw-link-panel{
+	float: right;
+	padding: 0px;
+}
+
+.aw-pessoa-panel{
+	float: left;
+	padding-top: 3px;
+}
