--- a/regionalizados/src/main/resources/templates/CadastroApoiador.html
+++ b/regionalizados/src/main/resources/templates/CadastroApoiador.html
@@ -34,10 +34,28 @@
 			  </div>
 			 
 			  <div class="form-group">
-			    <label for="rg" class="col-sm-2 control-label">Sobrenome</label>
+			    <label for="sobreNome" class="col-sm-2 control-label">Sobrenome</label>
 			    <div class="col-sm-4">
 			      <input type="text" class="form-control" id="sobreNome" name="sobreNome" placeholder="">
 			    </div>
+			  </div>
+			  
+			  <div class="form-group">
+				<label for="vinculo" class="col-sm-2 control-label">Vinculo</label>
+				<div class="col-sm-2">
+					<select class="form-control" name="vinculoApoiador">
+						<option th:each="vinculo : ${todosVinculos}" th:value="${vinculo}" th:text="${vinculo.descricao}"></option>
+                   	</select>
+                </div>
+			  </div>
+			  
+			  <div class="form-group">
+				<label for="segmento" class="col-sm-2 control-label">Segmento</label>
+				<div class="col-sm-2">
+					<select class="form-control" name="segmentoApoiador">
+						<option th:each="segmento : ${todosSegmentos}" th:value="${segmento}" th:text="${segmento.descricao}"></option>
+                   	</select>
+                </div>
 			  </div>
 			 
 			  <div class="form-group">
