--- a/regionalizados/src/main/resources/templates/CadastroApoiador.html
+++ b/regionalizados/src/main/resources/templates/CadastroApoiador.html
@@ -9,12 +9,10 @@
 </head>
  
  <section layout:fragment="conteudo">
-	<form class="form-horizontal" method="post" action="/apoiador">
-	
-		<div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
-			<span th:text="${mensagem}">esta mensagem esta vindo do PessoaController</span>
-		</div>
-	
+	<form class="form-horizontal" method="post" action="/apoiador" th:object="${apoiador}">
+		
+		<div th:replace="Mensagem"></div>
+		
 		<div class="panel panel-default">
 		
 		  <div class="panel-heading">
@@ -26,17 +24,17 @@
 		  
 		  <div class="panel-body">
 		   	
-		   	  <div class="form-group">
+		   	  <div class="form-group" th:classappend="${#fields.hasErrors('nome')} ? 'has-error'">
 			    <label for="nome" class="col-sm-2 control-label">Nome</label>
 			    <div class="col-sm-4">
-			      <input type="text" class="form-control" id="nome" name="nome" placeholder="">
+			      <input type="text" class="form-control" id="nome" th:field="*{nome}" placeholder="">
 			    </div>
 			  </div>
 			 
-			  <div class="form-group">
+			  <div class="form-group" th:classappend="${#fields.hasErrors('sobreNome')} ? 'has-error'">
 			    <label for="sobreNome" class="col-sm-2 control-label">Sobrenome</label>
 			    <div class="col-sm-4">
-			      <input type="text" class="form-control" id="sobreNome" name="sobreNome" placeholder="">
+			      <input type="text" class="form-control" id="sobreNome" th:field="*{sobreNome}" placeholder="">
 			    </div>
 			  </div>
 			  
@@ -59,13 +57,6 @@
 			  </div>
 			 
 			  <div class="form-group">
-			    <label for="dataRegistro" class="col-sm-2 control-label">Data de Registro</label>
-			    <div class="col-sm-4">
-			      <input type="text" class="form-control" id="dataRegistro" name="dataRegistro">
-			    </div>
-			  </div> 
-			  
-			  <div class="form-group">
 				<label for="status" class="col-sm-2 control-label">Apoio Confirmado</label>
 				<div class="col-sm-2">
 					<select class="form-control" name="status">
@@ -73,6 +64,13 @@
                    	</select>
                 </div>
 			  </div>
+			  
+			  <div class="form-group">
+<!-- 			    <label for="dataRegistro" class="col-sm-2 control-label">Data de Registro</label> -->
+			    <div class="col-sm-4">
+			      <input type="hidden" class="form-control" id="dataRegistro" name="dataRegistro" th:value="${#dates.format(#dates.createNow(),'dd/MM/YYYY HH:mm')}">
+			    </div>
+			  </div> 
 			  
 			   <div class="form-group">
 			    <div class="col-sm-offset-2 col-sm-10">
