--- a/regionalizados/src/main/resources/templates/PesquisaApoiadores.html
+++ b/regionalizados/src/main/resources/templates/PesquisaApoiadores.html
@@ -39,8 +39,8 @@
 		  			<td class="text-center" th:text="${apoiador.codigo}"> </td>
 		  			<td class="text-center" th:text="${apoiador.nome}"> </td>
 		  			<td th:text="${apoiador.sobreNome}"> </td>
-		  			<td th:text="${apoiador.vinculoApoiador.descricao}"> </td>
-		  			<td th:text="${apoiador.segmentoApoiador.descricao}"> </td>
+		  			<td class="text-center"  th:text="${apoiador.vinculoApoiador.descricao}"> </td>
+		  			<td class="text-center"  th:text="${apoiador.segmentoApoiador.descricao}"> </td>
 		  			<td class="text-center">
    						<span class="label" th:text="${apoiador.status.descricao}"
    							th:classappend="${apoiador.Sim ? 'label-success' : 'label-danger'}"></span>
@@ -50,7 +50,7 @@
 		  		</tr>
 		  	
 		  		<tr>
-		  			<td colspan="6" th:if="${#lists.isEmpty(pessoas)}"> Nenhuma apoiador foi encontrado </td>
+		  			<td colspan="6" th:if="${#lists.isEmpty(apoiadores)}"> Nenhum apoiador foi encontrado </td>
 		  		</tr>
 		  	</tbody>
 		  	
