--- a/regionalizados/src/main/resources/templates/LayoutPadrao.html
+++ b/regionalizados/src/main/resources/templates/LayoutPadrao.html
@@ -23,4 +23,5 @@
 
 <script src="/js/jquery-2.1.4.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+<script src="/js/regionalizado.js"></script>
 </html>
