--- a/regionalizados/src/main/resources/templates/PesquisaApoiadores.html
+++ b/regionalizados/src/main/resources/templates/PesquisaApoiadores.html
@@ -9,6 +9,9 @@
 </head>
 
 <section layout:fragment="conteudo">
+	
+	<div th:replace="MensagemGeral"></div>
+	
 	<div class="panel panel-default">
 		
 	  <div class="panel-heading">
@@ -30,7 +33,7 @@
 		  			<th class="text-center col-md-2">Segmento</th>
 		  			<th class="text-center col-md-2">Apoio Confirmado</th>
 		  			<th class="text-center col-md-2">Data de Registro</th>
-		  			<th class="col-md-1">Edição</th>
+		  			<th class="text-center col-md-1">Edição</th>
 		  		</tr>
 		  	</thead>
 		  	
@@ -46,16 +49,27 @@
    							th:classappend="${apoiador.Sim ? 'label-success' : 'label-danger'}"></span>
 	   				</td>
 	   				<td class="text-center" th:text="${{apoiador.dataRegistro}}"> </td>
-		  			<td class="text-center"> </td>
+		  			<td class="text-center"> 
+		  				<a class="btn btn-link btn-xs" th:href="@{/apoiador/{codigo}(codigo=${apoiador.codigo})}">
+		  					<span class="glyphicon glyphicon-pencil"></span>
+		  				</a>
+		  				
+		  				<a class="btn btn-link btn-xs" data-toggle="modal" data-target="#confirmacaoExclusaoModal"
+		  						  th:attr="data-codigo=${apoiador.codigo}, data-nome=${apoiador.nome}">
+		  					<span class="glyphicon glyphicon-remove"></span>
+		  				</a>
+		  			</td>
 		  		</tr>
 		  	
 		  		<tr>
-		  			<td colspan="6" th:if="${#lists.isEmpty(apoiadores)}"> Nenhum apoiador foi encontrado </td>
+		  			<td colspan="8" th:if="${#lists.isEmpty(apoiadores)}"> Nenhum apoiador foi encontrado </td>
 		  		</tr>
 		  	</tbody>
 		  	
 		  </table>
 		</div>
+		
+		<div th:replace="DialogoConfirmacaoExclusao"></div>
 	 		
 	 </div>
  </section>
