--- a/regionalizados/src/main/resources/templates/DialogoConfirmacaoExclusao.html
+++ b/regionalizados/src/main/resources/templates/DialogoConfirmacaoExclusao.html
@@ -6,7 +6,7 @@
 	<div class="modal fade" id="confirmacaoExclusaoModal" tabindex="-1" role="dialog">
 		<div class="modal-dialog">
 		
-			<form th:attr="data-url-base='/apoiador'" method="post" th:method="DELETE">
+			<form th:attr="data-url-base=@{/apoiador}" method="post" th:method="DELETE">
 				<div class="modal-content">
 				
 					<div class="modal-header">
