--- a/regionalizados/src/main/resources/templates/LayoutPadrao.html
+++ b/regionalizados/src/main/resources/templates/LayoutPadrao.html
@@ -5,9 +5,11 @@
 	  
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Regionalizados</title>
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/estilo.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/estilo.css}">
 </head>
 
 <body>
@@ -21,7 +23,7 @@
 </body>
 
 
-<script src="/js/jquery-2.1.4.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/regionalizado.js"></script>
+<script th:src="@{/js/jquery-2.1.4.min.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/regionalizado.js}"></script>
 </html>
